--- a/Week5_Grids/login.html
+++ b/Week5_Grids/login.html
@@ -107,12 +107,12 @@
 	  					<div id="signinpop">
 	  						<form method="post" action="#" id="comments">
 		  						<label  for ="form-name">EMAIL:</label>
-								<input class="login" type="text" id="form-name" name="form-name" placeholder="">
+								<input class="login" type="text" id="form-name" name="form-name" value="maryl@nood.ca">
 
 								<label  for ="form-name">PASSWORD:</label>
-								<input class="login" type="password" id="form-name" name="form-name" placeholder="">
+								<input class="login" type="password" id="form-name" name="form-name" value="123456">
 		  					</form>
-		  					<a class="buynowBut" href="profile.html">LOG IN</a>
+		  					<a class="buynowBut" href="menu1.html">LOG IN</a>
 	  					</div>
 	  				</div>
 	  				
