--- a/Week5_Grids/cart1.html
+++ b/Week5_Grids/cart1.html
@@ -116,12 +116,13 @@
 		  				</div>
             </article>
           </div>
+
           <div class="col-4of5">
             <article id="paddingleftNext">
               <div class="col-2of4">
                 <img class="cart" src="img/nood1.jpg" width="80" height="80">
                 <h3 id="cartitemname">Fishball Nood</h3>
-                <p class="cart"><a class="cart" href="detailview.html">VIEW DETAILS</a> / <a class="cart" href="cart1.html">REMOVE</a></p>
+                <p class="cart"><a class="cart" href="detailview.html">VIEW DETAILS</a> / <a class="cart" href="cart.html">REMOVE</a></p>
               </div>
 
               <div class="col-1of4">
@@ -133,33 +134,15 @@
               </div>
             </article>
           </div>
-
-          <div class="col-4of5">  
-            <article id="paddingleftNext">
-              <div class="col-2of4">
-                <img class="cart" src="img/sample.jpg" width="85">
-                <h3 id="cartitemname">My Noodle</h3>
-                <p class="cart"><a class="cart" href="donenood.html">VIEW DETAILS</a> / <a class="cart" href="cart1.html">REMOVE</a></p>
-              </div>
-
-              <div class="col-1of4">
-                <h3 class="cartquantity">1</h3>
-              </div>
-
-              <div class="col-1of4">
-                <h3 class="cartprice">$5.50</h3>
-              </div>	  				
-            </article>
-          </div>
   			</div>
 
   			<div class="grid">
   				<div class="col-4of5" id="carttotal">
   					<div class="col-1of4" id="total">
-              <input class="promotioncode" type="text" name="" value="get1free">
-  						<h3 class ="cart">$12.25</h3>
-  						<h3 class ="cart">$0.61</h3>
-  						<h3 class="cart" id="carttotalprice" >$12.86</h3>
+              <input class="promotioncode" type="text" name="" value="">
+  						<h3 class ="cart">$6.75</h3>
+  						<h3 class ="cart">$0.34</h3>
+  						<h3 class="cart" id="carttotalprice" >$7.09</h3>
   					</div>
   					<div class="col-1of4" id="total">
               <h3 class="cart">PROMOTION:</h3>
