--- a/Week5_Grids/choosesoup.html
+++ b/Week5_Grids/choosesoup.html
@@ -130,7 +130,7 @@
 
   					<div id="createnood" class="col-1of3">
   						<img id ="unselected" class="menu"src="img/soup_superspicy.jpg">
-              <p class="cartNrow">Super Spicy Soup</p>
+              <p class="cartNrow">Spicy Soup</p>
               <p class="cartProw">$2.00</p>
               <p class="cartDrow">Sichuanese peppercorn, chili pepper and simmered with oil</p>
               <img class="rating"src="img/star.jpg">
@@ -157,7 +157,7 @@
 
   					<div id="createnood" class="col-1of3">
   						<img id ="unselected" class="menu"src="img/soup_medicine.jpg">
-              <p class="cartNrow">Wolfberries Soup</p>
+              <p class="cartNrow">Wolfberry Soup</p>
               <p class="cartProw">$2.00</p>
               <p class="cartDrow">A chinese medicine that preserves youth and health</p>
               <img class="rating"src="img/star.jpg">
