--- a/Week5_Grids/confirm.html
+++ b/Week5_Grids/confirm.html
@@ -108,16 +108,16 @@
 	  				<article id="paddingleft">
 	  				<h1 class="global">CONFIRMATION</h1>
 
-	  				<div class="col-1of2">	
-	  					<article id="">
-	  						<h2>ORDERING METHOD</h2>
+	  				<div id="confirm" class="col-1of2">	
+	  					<article id="myorder1">
+	  						<h2 class="confirm">ORDERING METHOD</h2>
 	  						<p class="pi">DINE IN</p>
 	  						<p class="pi">STORE : Joyce</p>
 	  						<p class="pi">TABLE NUMBER : 13</p>
 	  					</article>
 						
-						<article id="">
-	  						<h2>PERSONAL & BILLING INFORMATION</h2>
+						<article id="myorder1">
+	  						<h2 class="confirm">PERSONAL & BILLING INFORMATION</h2>
 	  						<p class="pi">NAME : Mary</p>
 	  						<p class="pi">TELEPHONE : 6041232333</p>
 	  						<p class="pi">PAYMENT TYPE : VISA</p>
@@ -127,18 +127,18 @@
 	  					</article>
 	  			    </div>
 
-	  			    <div class="col-1of2">
-	  			    	<article id="">
-	  						<h2>MY ORDER</h2>
-	  						<img class="cart" src="img/nood1.jpg" width="80" height="80">
+	  			    <div id="confirm" class="col-1of2">
+	  			    	<article id="myorder">
+	  						<h2 class="confirm">MY ORDER</h2>
+	  						<img class="cart" src="img/nood1.jpg" width="60" height="60">
                 			<p class="pi">Fishball Nood</p>
                 			<p class="pi">$6.75</p>
-                			<p class="cart"><a class="cart" href="detailview.html">VIEW DETAILS</a> / <a class="cart" href="">REMOVE</a></p>
+                			<p class="cart"><a id="confirm" class="cart" href="detailview.html">VIEW DETAILS</a> / <a id="confirm" class="cart" href="">REMOVE</a></p>
 
-                			<img class="cart" src="img/nood1.jpg" width="80" height="80">
+                			<img class="cart" src="img/sample.jpg" width="60" height="60">
                 			<p class="pi">My Noodle</p>
                 			<p class="pi">$0</p>
-                			<p class="cart"><a class="cart" href="donenood.html">VIEW DETAILS</a> / <a class="cart" href="">REMOVE</a></p>
+                			<p class="cart"><a id="confirm" class="cart" href="donenood.html">VIEW DETAILS</a> / <a id="confirm" class="cart" href="">REMOVE</a></p>
 
                 			<p class="pi">PROMOTION CODE : get1free</p>
                 			<h3 id="cartitemname">TOTAL : $7.08</h3>
