--- a/Week5_Grids/contact.html
+++ b/Week5_Grids/contact.html
@@ -102,11 +102,11 @@
 
   			<div id="store" class="col-4of5">
           <article id="paddingleft">
-          <div class="col-1of2">
+          <div id="contact" class="col-1of2">
             <img class="contact"src="img/store2.jpg" width="300">
           </div>
 
-          <div class="col-1of2">
+          <div id="contact" class="col-1of2">
             <p class="contactH">ORIGINAL NOOD RESTAURANT - JOYCE</p>
             <p class="contact">Address :<br>3318 Kingsway, Vancouver, BC V5R 5L1<br><br>Phone : (604) 123-3344<br><br>Opening hours :<br>Monday   CLOSED<br>Tuesday -  Thursday   12pm - 9pm<br>Friday - Sunday   12pm - 1am</p>
             <a class="addtocart" href="menu.html">VIEW MENU</a>
