--- a/Week5_Grids/login.html
+++ b/Week5_Grids/login.html
@@ -128,7 +128,7 @@
 								<label  for ="form-name">CONFIRM PASSWORD:</label>
 								<input class="login" type="password" id="form-name" name="form-name" placeholder="">
 		  					</form>
-		  					<a class="buynowBut" href="">REGISTER</a>
+		  					<a class="buynowBut" href="menu1.html">REGISTER</a>
 	  					</div>
 	  				</div>
 	  				</div>
