--- a/Week5_Grids/index.html
+++ b/Week5_Grids/index.html
@@ -99,7 +99,7 @@
 
       <article id="content3">
     		<div class="grid">
-    			<div class="col-1of3">
+    			<div id="home" class="col-1of3">
             <div class="rowGlobal">
       				<h1 class="global">NEW STREET SNACK CART NOODLE</h1>
       				<p class = "homepromo">It is one of the top three cart noodles. All the toppings are Hong Kong street snack, including curry fish ball, chinese red sasusage, pig blood and chinese radish. It services with our sepcial homemade soup. It would be the best choice if you want to eat many snack at once!</p>
@@ -107,7 +107,7 @@
             </div>
     			</div>
 
-    			<div class="col-1of3">
+    			<div id="home" class="col-1of3">
             <div class="rowGlobal">
               <img class="home"src="img/bignews1.jpg" width="100%" height="90%">
             </div>
@@ -132,7 +132,7 @@
     			<div class="col-oneof5">
             <!-- <a href="detailview.html"><img class="homebottom"src="img/nood1.jpg" width="170" height="170"></a> -->
             <div class="view-first">  
-                 <img class="homebottom"src="img/nood1.jpg" width="170" height="170">
+                 <a href="detailview.html"><img class="homebottom"src="img/nood1.jpg" width="170" height="170"></a>
                  <div class="mask">  
                      <a href="detailview.html" class="info">VIEW DETAILS</a>  
                  </div>  
@@ -142,9 +142,8 @@
             <img class="rating"src="img/star.jpg">
     			</div>
     			<div class="col-oneof5">
-           <!--  <img class="homebottom"src="img/nood2.jpg" width="170" height="170"> -->
             <div class="view-first">  
-                 <img class="homebottom"src="img/nood2.jpg" width="170" height="170">
+                 <a href="detailview.html"><img class="homebottom"src="img/nood2.jpg" width="170" height="170"></a>
                  <div class="mask">  
                      <a href="detailview.html" class="info">VIEW DETAILS</a>  
                  </div>  
@@ -155,19 +154,35 @@
             <img class="rating"src="img/star.jpg">
           </div>
     			<div class="col-oneof5">
-            <img class="homebottom"src="img/nood3.jpg" width="170" height="170">
+
+            <div class="view-first">  
+                 <a href="detailview.html"><img class="homebottom"src="img/nood3.jpg" width="170" height="170"></a>
+                 <div class="mask">  
+                     <a href="detailview.html" class="info">VIEW DETAILS</a>  
+                 </div>  
+            </div> 
             <p class="homeNrow">Beef Lover</p>
             <p class="homeProw">$6.75</p>
             <img class="rating"src="img/star.jpg">
           </div>
     			<div class="col-oneof5">
-            <img class="homebottom"src="img/nood4.jpg" width="170" height="170">
+            <div class="view-first">  
+                 <a href="detailview.html"><img class="homebottom"src="img/nood4.jpg" width="170" height="170"></a>
+                 <div class="mask">  
+                     <a href="detailview.html" class="info">VIEW DETAILS</a>  
+                 </div>  
+            </div> 
             <p class="homeNrow">Pork Lover</p>
             <p class="homeProw">$6.75</p>
             <img class="rating"src="img/star.jpg">
     			</div>
     			<div class="col-oneof5">
-            <img class="homebottom"src="img/nood5.jpg" width="170" height="170">
+            <div class="view-first">  
+               <a href="detailview.html"><img class="homebottom"src="img/nood5.jpg" width="170" height="170"></a>
+               <div class="mask">  
+                   <a href="detailview.html" class="info">VIEW DETAILS</a>  
+               </div>  
+            </div> 
             <p class="homeNrow">Vege Nood</p>
             <p class="homeProw">$6.75</p>
             <img class="rating"src="img/star.jpg">
