--- a/Week5_Grids/index3.html
+++ b/Week5_Grids/index3.html
@@ -97,7 +97,7 @@
 
       <article id="content3">
     		<div class="grid">
-    			<div class="col-1of3">
+    			<div id="home" class="col-1of3">
             <div class="rowGlobal">
       				<h1 class="global">BUY ONE GET ONE FREE code: get1free</h1>
       				<p class = "homepromo">To celebrate our new store in Downtown Vancouver, you can buy one get one free of any products in any Nood cart noodle restaurants in Canada. Providing the promotion code while ordering in stores or online, you can enjoy one more order for FREE. Are you ready?</p>
@@ -105,13 +105,13 @@
             </div>
     			</div>
 
-    			<div class="col-1of3">
+    			<div id="home" class="col-1of3">
             <div class="rowGlobal">
               <img class="home"src="img/codebig.jpg" width="100%">
             </div>
     			</div>
 
-    			<div class="col-1of3">
+    			<div id ="homeside" class="col-1of3">
             <div class="rowGlobalsideimage">
               <a href="index.html"><p class="homeside"><img class="homeside"src="img/homeside_s1.jpg" width="250" height="40" alt="Street Snack"> NEW STREET SNACK NOODLE</p></a>
 
@@ -128,37 +128,56 @@
     		<h1 class="topFive">TOP FIVE CART NOODLES</h1>
     		<div class="grid">
     			<div class="col-oneof5">
-            <!-- <a href="detailview.html"><img class="homebottom"src="img/nood1.jpg" width="170" height="170"></a> -->
             <div class="view-first">  
-                 <img class="homebottom"src="img/nood1.jpg" width="170" height="170"/>
-                 <div class="mask">  
-                     <a href="detailview.html" class="info">VIEW DETAILS</a>  
-                 </div>  
+               <a href="detailview.html"><img class="homebottom"src="img/nood1.jpg" width="170" height="170"/></a>
+               <div class="mask">  
+                   <a href="detailview.html" class="info">VIEW DETAILS</a>  
+               </div>  
             </div>
             <p class="homeNrow">Fishball Nood</p>
             <p class="homeProw">$6.75</p>
             <img class="rating"src="img/star.jpg">
     			</div>
     			<div class="col-oneof5">
-            <img class="homebottom"src="img/nood2.jpg" width="170" height="170">
+            <div class="view-first">  
+               <a href="detailview.html"><img class="homebottom"src="img/nood2.jpg" width="170" height="170"/></a>
+               <div class="mask">  
+                   <a href="detailview.html" class="info">VIEW DETAILS</a>  
+               </div>  
+            </div>
             <p class="homeNrow">Healthy Nood</p>
             <p class="homeProw">$6.75</p>
             <img class="rating"src="img/star.jpg">
           </div>
     			<div class="col-oneof5">
-            <img class="homebottom"src="img/nood3.jpg" width="170" height="170">
+            <div class="view-first">  
+               <a href="detailview.html"><img class="homebottom"src="img/nood3.jpg" width="170" height="170"/></a>
+               <div class="mask">  
+                   <a href="detailview.html" class="info">VIEW DETAILS</a>  
+               </div>  
+            </div>
             <p class="homeNrow">Beef Lover</p>
             <p class="homeProw">$6.75</p>
             <img class="rating"src="img/star.jpg">
           </div>
     			<div class="col-oneof5">
-            <img class="homebottom"src="img/nood4.jpg" width="170" height="170">
+            <div class="view-first">  
+               <a href="detailview.html"><img class="homebottom"src="img/nood4.jpg" width="170" height="170"/></a>
+               <div class="mask">  
+                   <a href="detailview.html" class="info">VIEW DETAILS</a>  
+               </div>  
+            </div>
             <p class="homeNrow">Pork Lover</p>
             <p class="homeProw">$6.75</p>
             <img class="rating"src="img/star.jpg">
     			</div>
     			<div class="col-oneof5">
-            <img class="homebottom"src="img/nood5.jpg" width="170" height="170">
+            <div class="view-first">  
+               <a href="detailview.html"><img class="homebottom"src="img/nood5.jpg" width="170" height="170"/></a>
+               <div class="mask">  
+                   <a href="detailview.html" class="info">VIEW DETAILS</a>  
+               </div>  
+            </div>
             <p class="homeNrow">Vege Nood</p>
             <p class="homeProw">$6.75</p>
             <img class="rating"src="img/star.jpg">
