--- a/Week5_Grids/receipt.html
+++ b/Week5_Grids/receipt.html
@@ -106,28 +106,37 @@
             <div class="col-1of2">
 	  				  <article id="paddingleft">
   	  				  <h1 class="global">Receipt</h1>
-                <p class="pi">RECEIPT 23145</p>
-  	  				  <p class="pi">NOOD - JOYCE (Table 13)</p>
-                <p class="pi">1 Mar 2014   02:40pm</p>
-                <p class="pi">1 Fishball Nood    $6.75</p>
-                <p class="pi">1 My Noodle    $0</p>
-                <p class="pi">SUBTOTAL    $6.75</p>
-                <p class="pi">GST/HST $0.34</p>
-                <p class="pi">TOTAL $7.09</p>
-                <p class="pi">VISA : 456 *** *** ***</p>
+                <div class="col-oneoftwo">
+                  <p class="pi">RECEIPT</p>
+                  <p class="pi">NOOD - JOYCE</p>
+                  <p class="pi1">1 Mar 2014</p>
+                  <p class="pi">1 Fishball Nood</p>
+                  <p class="pi">1 My Noodle</p>
+                  <p class="pi">SUBTOTAL</p>
+                  <p class="pi">GST/HST</p>
+                  <p class="pi">TOTAL</p>
+                  <p class="pi">VISA :</p>
+                </div>
+                <div class="col-oneoftwo">
+                  <p class="pi">23145</p>
+                  <p class="pi">(Table 13)</p>
+                  <p class="pi1">02:40pm</p>
+                  <p class="pi">$6.75</p>
+                  <p class="pi">$0</p>
+                  <p class="pi">$6.75</p>
+                  <p class="pi">$0.34</p>
+                  <p class="pi">$7.09</p>
+                  <p class="pi">456 *** *** ***</p>
+                  <a class="conBut2" href="index.html">BACK TO HOME</a>
+                </div>
+
   	  				</article>
             </div>	
-
-            <div class="col-1of2">
-              <div id="signinsmall">
-                <h2 class="mycartsignin">TIME PROCESS</h2>
-                <h2 class="mycartsignin2">10 mins left</h2>
-              </div>
 	  			</div>
 
 	  			
 	  		</div>
-        <a class="conBut" href="index.html">BACK TO HOME</a>
+        
   		</article>
   		<script src="js/jquery.js"></script>
       	<script src="js/ui.js"></script>
