--- a/NOOD/contact.html
+++ b/NOOD/contact.html
@@ -5,18 +5,17 @@
     <meta charset="utf-8">
     <meta name ="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-<!--     <link rel="stylesheet" href="css/normalize.css"> -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/grid.css">
 
   	</head>
 
   	<body>
+      <!-- This is where the header for tablet size between 600px-900px -->
       <div id="tablet" class="grid">
           <div class="col-1of4">
             <a  href="index.html"><img class="logo" src="img/logo3.jpg"></a>
           </div>
-
           <nav id ="tablet"class="header">
           <div class="col-1of4">
             <p><a href="menu.html">FOOD MENU</a></p>
@@ -29,8 +28,8 @@
           </div>
         </nav>   
       </div>
+      <!-- This is where a list of links will be shown when the menu button is clicked on -->
       <div id="tablet2" class="grid">
-
         <nav id ="tablet2"class="header">
             <p><a href="about.html">ABOUT</a></p>
             <p><a href="news.html">NEWS</a></p>
@@ -39,7 +38,7 @@
             <p><a href="login.html">LOG IN</a></p>
         </nav>   
       </div>
-
+      <!-- This is where the mobile header will appear from 600px and below. -->
       <div id="mobile" class="grid">
           <div class="col-twoofseven">
             <a  href="index.html"><img class="logo" src="img/logo3.jpg"></a>
@@ -49,8 +48,8 @@
             <p class="mobile"><a class="menutop"><span class="line"></span></a></p>      
         </nav>   
       </div>
+      <!-- This is where a list of links will be shown when the menu button is clicked on -->
       <div id="mobile2" class="grid">
-
         <nav id ="mobile2"class="header">
             <p><a href="about.html">ABOUT</a></p>
             <p><a href="news.html">NEWS</a></p>
@@ -61,7 +60,7 @@
             <p><a href="login.html">LOG IN</a></p>
         </nav>   
       </div>
-      
+      <!-- This is where the normal window size header is -->
   		<header class="grid">	
   			<nav class="header">
           <div class="col-6of24">
@@ -94,18 +93,17 @@
   			</nav>
   		</header>
 
+      <!-- This is where the two location contacts will be displayed -->
       <article id="content">
   		<div class="grid">
         <div class="col-1of5">
           <h1 class="contact">STORES</h1>
         </div>
-
   			<div id="store" class="col-4of5">
           <article id="paddingleft">
           <div id="contact" class="col-1of2">
             <img class="contact"src="img/store2.jpg" width="300">
           </div>
-
           <div id="contact" class="col-1of2">
             <p class="contactH">ORIGINAL NOOD RESTAURANT - JOYCE</p>
             <p class="contact">Address :<br>3318 Kingsway, Vancouver, BC V5R 5L1<br><br>Phone : (604) 123-3344<br><br>Opening hours :<br>Monday   CLOSED<br>Tuesday -  Thursday   12pm - 9pm<br>Friday - Sunday   12pm - 1am</p>
@@ -130,6 +128,7 @@
 
       </div>
     </article>
+    <!-- Connect the html file with the jquery UI file -->
     <script src="js/jquery.js"></script>
     <script src="js/ui.js"></script>
   	</body>
