--- a/NOOD/detailview.html
+++ b/NOOD/detailview.html
@@ -5,18 +5,17 @@
     <meta charset="utf-8">
     <meta name ="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detail View</title>
-<!--     <link rel="stylesheet" href="css/normalize.css"> -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/grid.css">
 
   	</head>
 
   	<body>
+      <!-- This is where the header for tablet size between 600px-900px -->
       <div id="tablet" class="grid">
           <div class="col-1of4">
             <a  href="index.html"><img class="logo" src="img/logo3.jpg"></a>
           </div>
-
           <nav id ="tablet"class="header">
             <div class="col-1of4">
               <p><a href="menu.html">FOOD MENU</a></p>
@@ -29,8 +28,8 @@
             </div>
           </nav>   
       </div>
+      <!-- This is where a list of links will be shown when the menu button is clicked on -->
       <div id="tablet2" class="grid">
-
         <nav id ="tablet2"class="header">
             <p><a href="about.html">ABOUT</a></p>
             <p><a href="news.html">NEWS</a></p>
@@ -39,7 +38,7 @@
             <p><a href="login.html">LOG IN</a></p>
         </nav>   
       </div>
-
+      <!-- This is where the mobile header will appear from 600px and below. -->
       <div id="mobile" class="grid">
           <div class="col-twoofseven">
             <a  href="index.html"><img class="logo" src="img/logo3.jpg"></a>
@@ -49,8 +48,8 @@
             <p class="mobile"><a class="menutop"><span class="line"></span></a></p>      
         </nav>   
       </div>
+      <!-- This is where a list of links will be shown when the menu button is clicked on -->
       <div id="mobile2" class="grid">
-
         <nav id ="mobile2"class="header">
             <p><a href="about.html">ABOUT</a></p>
             <p><a href="news.html">NEWS</a></p>
@@ -61,6 +60,7 @@
             <p><a href="login.html">LOG IN</a></p>
         </nav>   
       </div>
+      <!-- This is where the normal window size header is -->
   		<header class="grid">
   			<nav class="header">
           <div class="col-6of24">
@@ -92,7 +92,7 @@
 	  			</div>
   			</nav>
   		</header>
-
+      <!-- This is where the detailed view of a noodle will be displayed -->
   		<article id="content">
   		<div class="grid">
   			<div class="col-1of5">
@@ -104,8 +104,6 @@
   			<div class="col-4of5">
   				<article id="paddingleft">
   					<h1 class="globalDetailview"><img class="ratingdetailview"src="img/star.jpg">Fishball Nood</h1>
-  					
-
 	  				<div id="detailview" class="col-1of2">
 	  					<img class="home"src="img/bignews1.jpg" width="90%" height="90%">
 	  				</div>
@@ -123,7 +121,6 @@
   			<div class="col-4of5">
   				<article id="paddingleft">
   					<a class="detailviewaddtocart" href="cart.html">ADD TO CART</a>
-
   					<select class="detailview">
 						<option value="">1</option>
 					  	<option value="">2</option>
@@ -132,6 +129,8 @@
 					<p class="quantity">QUANTITY:</p>
   				</article>
   			</div>
+        <!-- This is where the text area of the users to comment and see the previous comment from other 
+        users -->
   			<div class="col-4of5">
   				<article id="paddingleft">
   					<h1 class="globalDetailview2">MY COMMENT</h1>
