--- a/NOOD/menu1.html
+++ b/NOOD/menu1.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <meta name ="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
-<!--     <link rel="stylesheet" href="css/normalize.css"> -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/imagehover2.css">
@@ -13,11 +12,11 @@
   	</head>
 
   	<body>
+      <!-- This is where the header for tablet size between 600px-900px -->
       <div id="tablet" class="grid">
           <div class="col-1of4">
             <a  href="index.html"><img class="logo" src="img/logo3.jpg"></a>
           </div>
-
           <nav id ="tablet"class="header">
           <div class="col-1of4">
             <p><a href="menu.html">FOOD MENU</a></p>
@@ -30,8 +29,8 @@
           </div>
         </nav>   
       </div>
+      <!-- This is where a list of links will be shown when the menu button is clicked on -->
       <div id="tablet2" class="grid">
-
         <nav id ="tablet2"class="header">
             <p><a href="about.html">ABOUT</a></p>
             <p><a href="news.html">NEWS</a></p>
@@ -40,18 +39,17 @@
             <p><a href="login.html">LOG IN</a></p>
         </nav>   
       </div>
-
+      <!-- This is where the mobile header will appear from 600px and below. -->
       <div id="mobile" class="grid">
           <div class="col-twoofseven">
             <a  href="index.html"><img class="logo" src="img/logo3.jpg"></a>
           </div>
-
           <nav id ="mobile"class="header">
             <p class="mobile"><a class="menutop"><span class="line"></span></a></p>      
-        </nav>   
+          </nav>   
       </div>
+      <!-- This is where a list of links will be shown when the menu button is clicked on -->
       <div id="mobile2" class="grid">
-
         <nav id ="mobile2"class="header">
             <p><a href="about.html">ABOUT</a></p>
             <p><a href="news.html">NEWS</a></p>
@@ -62,7 +60,7 @@
             <p><a href="login.html">LOG IN</a></p>
         </nav>   
       </div>
-
+      <!-- This is where the normal window size header is -->
   		<header class="grid">
   			<nav class="header">
           <div class="col-6of24">
@@ -94,7 +92,7 @@
 	  			</div>
   			</nav>
   		</header>
-
+      <!-- This is where the list of food menu is being displayed. Cart noodles, soup, drinks and dessert respectively -->
   		<article id="content">
   		<div class="grid">
   			<div class="col-1of5">
@@ -109,7 +107,6 @@
   					<h1 class="global">CART NOODLES</h1>
 
   					<div class="col-1of3" id="menu">
-              <!-- <img class="menu"src="img/nood1.jpg" width="210" height="150"> -->
 
               <div class="view-first">  
                   <a href="detailview.html"><img class="menu"src="img/nood1.jpg"></a>
@@ -125,7 +122,6 @@
   					</div>
 
   					<div class="col-1of3" id="menu">
-  						<!-- <img class="menu"src="img/nood2.jpg" width="210" height="150"> -->
               <div class="view-first">  
                   <a href="detailview.html"><img class="menu"src="img/nood2.jpg"></a>
                  <div class="mask">  
@@ -140,7 +136,6 @@
   					</div>
 
   					<div class="col-1of3" id="menu">
-  						<!-- <img class="menu"src="img/nood3.jpg" width="210" height="150"> -->
               <div class="view-first">  
                   <a href="detailview.html"><img class="menu"src="img/nood3.jpg"></a>
                  <div class="mask">  
@@ -154,7 +149,6 @@
               <a class="prodcomment" href="detailview.html">48 Comments</a>
   					</div>
             <div class="col-1of3" id="menu">
-              <!-- <img class="menu"src="img/nood4.jpg" width="210" height="150"> -->
               <div class="view-first">  
                   <a href="detailview.html"><img class="menu"src="img/nood4.jpg"></a>
                  <div class="mask">  
@@ -169,7 +163,6 @@
             </div>
 
             <div class="col-1of3" id="menu">
-              <!-- <img class="menu"src="img/nood5.jpg" width="210" height="150"> -->
               <div class="view-first">  
                   <a href="detailview.html"><img class="menu"src="img/nood5.jpg"></a>
                  <div class="mask">  
@@ -184,7 +177,6 @@
             </div>
 
             <div class="col-1of3" id="menu">
-              <!-- <img class="menu"src="img/nood6.jpg" width="210" height="150"> -->
               <div class="view-first">  
                   <a href="detailview.html"><img class="menu"src="img/nood6.jpg"></a>
                  <div class="mask">  
@@ -202,7 +194,6 @@
   				<article id="soup">
             <h1 class="global">Soup</h1>
             <div class="col-1of3" id="menu">
-              <!-- <img class="menu"src="img/soup.jpg" width="210" height="150"> -->
               <div class="view-first">  
                   <a href="detailview.html"><img class="menu"src="img/soup.jpg"></a>
                  <div class="mask">  
@@ -217,7 +208,6 @@
             </div>
 
             <div class="col-1of3" id="menu">
-              <!-- <img class="menu"src="img/soup_pork.jpg" width="210" height="150"> -->
               <div class="view-first">  
                   <a href="detailview.html"><img class="menu"src="img/soup_pork.jpg"></a>
                  <div class="mask">  
@@ -232,7 +222,6 @@
             </div>
 
             <div class="col-1of3" id="menu">
-              <!-- <img class="menu"src="img/soup_beef.jpg" width="210" height="150"> -->
               <div class="view-first">  
                   <a href="detailview.html"><img class="menu"src="img/soup_beef.jpg"></a>
                  <div class="mask">  
@@ -245,30 +234,11 @@
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="detailview.html">56 Comments</a>
             </div>
-
-<!--             <div class="col-1of3" id="menu">
-              <img class="menu"src="img/soup.jpg" width="210" height="150">
-              <p class="cartNrow">Carrot Pork Soup</p>
-              <p class="cartProw">$3.50</p>
-              <p class="cartDrow">Carrot, potato and juicy pork</p>
-              <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">56 Comments</a>
-            </div>
-
-            <div class="col-1of3" id="menu">
-              <img class="menu"src="img/soup.jpg" width="210" height="150">
-              <p class="cartNrow">Carrot Pork Soup</p>
-              <p class="cartProw">$3.50</p>
-              <p class="cartDrow">Carrot, potato and juicy pork</p>
-              <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">56 Comments</a>
-            </div> -->
   				</article>
 
   				<article id="drinks">
             <h1 class="global">Drinks</h1>
             <div class="col-1of3" id="menu">
-              <!-- <img class="menu"src="img/drink.jpg" width="210" height="150"> -->
               <div class="view-first">  
                   <a href="detailview.html"><img class="menu"src="img/drink.jpg"></a>
                  <div class="mask">  
@@ -283,7 +253,6 @@
             </div>
 
             <div class="col-1of3" id="menu">
-              <!-- <img class="menu"src="img/drink_redbean.jpg" width="210" height="150"> -->
               <div class="view-first">  
                   <a href="detailview.html"><img class="menu"src="img/drink_redbean.jpg"></a>
                  <div class="mask">  
@@ -298,7 +267,6 @@
             </div>
 
             <div class="col-1of3" id="menu">
-              <!-- <img class="menu"src="img/drink_milktea.jpg" width="210" height="150"> -->
               <div class="view-first">  
                   <a href="detailview.html"><img class="menu"src="img/drink_milktea.jpg"
                     ></a>
@@ -312,39 +280,11 @@
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="detailview.html">19 Comments</a>
             </div>
-
-<!--             <div class="col-1of3" id="menu">
-              <img class="menu"src="img/drink.jpg" width="210" height="150">
-              <p class="cartNrow">Ice Lemon Tea</p>
-              <p class="cartProw">$1.50</p>
-              <p class="cartDrow">Red tea with slides of lemon</p>
-              <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">19 Comments</a>
-            </div>
-
-            <div class="col-1of3" id="menu">
-              <img class="menu"src="img/drink.jpg" width="210" height="150">
-              <p class="cartNrow">Ice Lemon Tea</p>
-              <p class="cartProw">$1.50</p>
-              <p class="cartDrow">Red tea with slides of lemon</p>
-              <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">19 Comments</a>
-            </div>
-
-            <div class="col-1of3" id="menu">
-              <img class="menu"src="img/drink.jpg" width="210" height="150">
-              <p class="cartNrow">Ice Lemon Tea</p>
-              <p class="cartProw">$1.50</p>
-              <p class="cartDrow">Red tea with slides of lemon</p>
-              <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">19 Comments</a>
-            </div> -->
   				</article>
 
   				<article id="dessert">
             <h1 class="global">Desserts</h1>
             <div class="col-1of3" id="menu">
-              <!-- <img class="menu"src="img/dessert.jpg" width="210" height="150"> -->
               <div class="view-first">  
                   <a href="detailview.html"><img class="menu"src="img/dessert.jpg"></a>
                  <div class="mask">  
@@ -359,7 +299,6 @@
             </div>
 
             <div class="col-1of3" id="menu">
-              <!-- <img class="menu"src="img/dessert_pineapplebutter.jpg" width="210" height="150"> -->
               <div class="view-first">  
                   <a href="detailview.html"><img class="menu"src="img/dessert_pineapplebutter.jpg"></a>
                  <div class="mask">  
@@ -374,7 +313,6 @@
             </div>
 
             <div class="col-1of3" id="menu">
-              <!-- <img class="menu"src="img/dessert_portturnover.jpg" width="210" height="150"> -->
               <div class="view-first">  
                   <a href="detailview.html"><img class="menu"src="img/dessert_portturnover.jpg"></a>
                  <div class="mask">  
@@ -389,7 +327,6 @@
             </div>
 
             <div class="col-1of3" id="menu">
-              <!-- <img class="menu"src="img/dessert_eggball.jpg" width="210" height="150"> -->
               <div class="view-first">  
                   <a href="detailview.html"><img class="menu"src="img/dessert_eggball.jpg"></a>
                  <div class="mask">  
@@ -404,7 +341,6 @@
             </div>
 
             <div class="col-1of3" id="menu">
-              <!-- <img class="menu"src="img/dessert_waffle.jpg" width="210" height="150"> -->
               <div class="view-first">  
                   <a href="detailview.html"><img class="menu"src="img/dessert_waffle.jpg"></a>
                  <div class="mask">  
@@ -419,7 +355,6 @@
             </div>
 
             <div class="col-1of3" id="menu">
-              <!-- <img class="menu"src="img/dessert_riceball.jpg" width="210" height="150"> -->
               <div class="view-first">  
                   <a href="detailview.html"><img class="menu"src="img/dessert_riceball.jpg"></a>
                  <div class="mask">  
@@ -437,10 +372,10 @@
   			</div>
   		</div>
   		</article>
-      
+      <!-- Connect the html file with the jquery UI file -->
       <script src="js/jquery.js"></script>
       <script src="js/ui.js"></script>
-     <script src="js/jquery.scrollTo-1.4.3.1-min.js"></script>
+      <script src="js/jquery.scrollTo-1.4.3.1-min.js"></script>
 
   	</body>
 </html>
