--- a/NOOD/about.html
+++ b/NOOD/about.html
@@ -12,12 +12,11 @@
   	</head>
 
   	<body>
-
+      <!-- This is where the header for tablet size between 600px-900px -->
       <div id="tablet" class="grid">
           <div class="col-1of4">
             <a  href="index.html"><img class="logo" src="img/logo3.jpg"></a>
           </div>
-
           <nav id ="tablet"class="header">
           <div class="col-1of4">
             <p><a href="menu.html">FOOD MENU</a></p>
@@ -30,8 +29,8 @@
           </div>
         </nav>   
       </div>
+      <!-- This is where a list of links will be shown when the menu button is clicked on -->
       <div id="tablet2" class="grid">
-
         <nav id ="tablet2"class="header">
             <p><a href="about.html">ABOUT</a></p>
             <p><a href="news.html">NEWS</a></p>
@@ -40,7 +39,7 @@
             <p><a href="login.html">LOG IN</a></p>
         </nav>   
       </div>
-
+      <!-- This is where the mobile header will appear from 600px and below. -->
       <div id="mobile" class="grid">
           <div class="col-twoofseven">
             <a  href="index.html"><img class="logo" src="img/logo3.jpg"></a>
@@ -50,8 +49,9 @@
             <p class="mobile"><a class="menutop"><span class="line"></span></a></p>      
         </nav>   
       </div>
-      <div id="mobile2" class="grid">
 
+      <!-- This is where a list of links will be shown when the menu button is clicked on -->
+      <div id="mobile2" class="grid">
         <nav id ="mobile2"class="header">
             <p><a href="about.html">ABOUT</a></p>
             <p><a href="news.html">NEWS</a></p>
@@ -62,8 +62,8 @@
             <p><a href="login.html">LOG IN</a></p>
         </nav>   
       </div>
-  		<header class="grid">
-  			
+      <!-- This is where the normal window size header is -->
+  		<header class="grid">	
   			<nav class="header">
           <div class="col-6of24">
             <a href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
@@ -94,7 +94,7 @@
 	  			</div>
   			</nav>
   		</header>
-
+      <!-- This is where the content about us and history of the company is being displayed with pictures -->
       <article id="content">
   		<div class="grid">
   			<div class="col-1of5">
@@ -122,7 +122,7 @@
 
   		</div>
     </article>
-
+    <!-- Connect the html file with the jquery UI file -->
     <script src="js/jquery.js"></script>
     <script src="js/ui.js"></script>
     <script src="js/jquery.scrollTo-1.4.3.1-min.js"></script>
