--- a/NOOD/choosenoodle.html
+++ b/NOOD/choosenoodle.html
@@ -5,18 +5,17 @@
     <meta charset="utf-8">
     <meta name ="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Your Noodle</title>
-<!--     <link rel="stylesheet" href="css/normalize.css"> -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/grid.css">
 
   	</head>
 
   	<body>
+      <!-- This is where the header for tablet size between 600px-900px -->
       <div id="tablet" class="grid">
           <div class="col-1of4">
             <a  href="index.html"><img class="logo" src="img/logo3.jpg"></a>
           </div>
-
           <nav id ="tablet"class="header">
           <div class="col-1of4">
             <p><a href="menu.html">FOOD MENU</a></p>
@@ -29,8 +28,8 @@
           </div>
         </nav>   
       </div>
+      <!-- This is where a list of links will be shown when the menu button is clicked on -->
       <div id="tablet2" class="grid">
-
         <nav id ="tablet2"class="header">
             <p><a href="about.html">ABOUT</a></p>
             <p><a href="news.html">NEWS</a></p>
@@ -39,18 +38,17 @@
             <p><a href="login.html">LOG IN</a></p>
         </nav>   
       </div>
-
+<!-- This is where the mobile header will appear from 600px and below. -->
       <div id="mobile" class="grid">
           <div class="col-twoofseven">
             <a  href="index.html"><img class="logo" src="img/logo3.jpg"></a>
           </div>
-
           <nav id ="mobile"class="header">
             <p class="mobile"><a class="menutop"><span class="line"></span></a></p>      
-        </nav>   
+          </nav>   
       </div>
+      <!-- This is where a list of links will be shown when the menu button is clicked on -->
       <div id="mobile2" class="grid">
-
         <nav id ="mobile2"class="header">
             <p><a href="about.html">ABOUT</a></p>
             <p><a href="news.html">NEWS</a></p>
@@ -61,6 +59,7 @@
             <p><a href="login.html">LOG IN</a></p>
         </nav>   
       </div>
+      <!-- This is where the normal window size header is -->
   		<header class="grid">	
   			<nav class="header">
           <div class="col-6of24">
@@ -93,11 +92,12 @@
   			</nav>
   		</header>
 
+      <!-- This is where the list of noodles for users to choose from are being displayed the pictures are selectable and
+      it will unlock the 2nd step and so on -->
   		<article id="content4">
   			<div class="grid">
   			<div class="col-1of5">
           <a id="mobiledonebutton1" class="side" href="choosenoodle.html">Step 1:<br>Rice Noodle<br>$2.00</a>
-
   				<a id="mobiledonebutton2" class="sideonpage" href="choosenoodle.html">Step 1:<br>Choose Noodle</a>
           		<a id="selectside2"class="sideNone" href="">Step 2:<br>Choose Toppings</a>
           		<a class="sideNone" href="">Step 3:<br>Choose Soup</a>
@@ -168,7 +168,7 @@
   		</div>
 
   		</article>
-
+      <!-- Connect the html file with the jquery UI file -->
       <script src="js/jquery.js"></script>
       <script src="js/ui.js"></script>
   	</body>
