--- a/NOOD/confirm.html
+++ b/NOOD/confirm.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8">
     <meta name ="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confirmation</title>
-<!--     <link rel="stylesheet" href="css/normalize.css"> -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/grid.css">
 
   	</head>
 
   	<body>
+      <!-- This is where the header for tablet size between 600px-900px -->
   		<div id="tablet" class="grid">
           <div class="col-1of4">
             <a  href="index.html"><img class="logo" src="img/logo3.jpg"></a>
@@ -29,8 +29,8 @@
             </div>
           </nav>   
       </div>
+      <!-- This is where a list of links will be shown when the menu button is clicked on -->
       <div id="tablet2" class="grid">
-
         <nav id ="tablet2"class="header">
             <p><a href="about.html">ABOUT</a></p>
             <p><a href="news.html">NEWS</a></p>
@@ -39,7 +39,7 @@
             <p><a href="login.html">LOG IN</a></p>
         </nav>   
       </div>
-
+      <!-- This is where the mobile header will appear from 600px and below. -->
       <div id="mobile" class="grid">
           <div class="col-twoofseven">
             <a  href="index.html"><img class="logo" src="img/logo3.jpg"></a>
@@ -49,8 +49,8 @@
             <p class="mobile"><a class="menutop"><span class="line"></span></a></p>      
         </nav>   
       </div>
+      <!-- This is where a list of links will be shown when the menu button is clicked on -->
       <div id="mobile2" class="grid">
-
         <nav id ="mobile2"class="header">
             <p><a href="about.html">ABOUT</a></p>
             <p><a href="news.html">NEWS</a></p>
@@ -61,7 +61,7 @@
             <p><a href="login.html">LOG IN</a></p>
         </nav>   
       </div>
-  		
+  		<!-- This is where the normal window size header is -->
   		<header class="grid">
   			<nav class="header">
   				<div class="col-6of24">
@@ -93,7 +93,7 @@
 	  			</div>
   			</nav>
   		</header>
-
+      <!-- This is where users are asked to confirm after putting in their information -->
   		<article id="content4">
   			<div class="grid">
 	  			<div class="col-1of5">
