--- a/NOOD/index3.html
+++ b/NOOD/index3.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <meta name ="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nood Restaurant</title>
-<!--     <link rel="stylesheet" href="css/normalize.css"> -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/imagehover.css">
@@ -13,11 +12,11 @@
   	</head>
 
   	<body>
+      <!-- This is where the header for tablet size between 600px-900px -->
       <div id="tablet" class="grid">
           <div class="col-1of4">
             <a  href="index.html"><img class="logo" src="img/logo3.jpg"></a>
           </div>
-
           <nav id ="tablet"class="header">
             <div class="col-1of4">
               <p><a href="menu.html">FOOD MENU</a></p>
@@ -31,7 +30,7 @@
           </nav>   
       </div>
       <div id="tablet2" class="grid">
-
+        <!-- This is where a list of links will be shown when the menu button is clicked on -->
         <nav id ="tablet2"class="header">
             <p><a href="about.html">ABOUT</a></p>
             <p><a href="news.html">NEWS</a></p>
@@ -40,18 +39,17 @@
             <p><a href="login.html">LOG IN</a></p>
         </nav>   
       </div>
-
+      <!-- This is where the mobile header will appear from 600px and below. -->
       <div id="mobile" class="grid">
           <div class="col-twoofseven">
             <a  href="index.html"><img class="logo" src="img/logo3.jpg"></a>
           </div>
-
           <nav id ="mobile"class="header">
             <p class="mobile"><a class="menutop"><span class="line"></span></a></p>      
-        </nav>   
+          </nav>   
       </div>
+      <!-- This is where a list of links will be shown when the menu button is clicked on -->
       <div id="mobile2" class="grid">
-
         <nav id ="mobile2"class="header">
             <p><a href="about.html">ABOUT</a></p>
             <p><a href="news.html">NEWS</a></p>
@@ -62,7 +60,7 @@
             <p><a href="login.html">LOG IN</a></p>
         </nav>   
       </div>
-
+      <!-- This is where the normal window size header is -->
   		<header class="grid">
   			<nav class="header">
           <div class="col-6of24">
@@ -94,7 +92,7 @@
 	  			</div>
   			</nav>
   		</header>
-
+      <!-- This is where the first content is being displayed seperated into 3 columnes, text, picture and side links -->
       <article id="content3">
     		<div class="grid">
     			<div id="home" class="col-1of3">
@@ -123,7 +121,8 @@
 
       	</div>
       </article>
-
+      
+      <!-- This is the second content that contains the top 5 noodle and their picture -->
       <article id="content2">
     		<h1 class="topFive">TOP FIVE CART NOODLES</h1>
     		<div class="grid">
@@ -184,6 +183,7 @@
     			</div>
   		  </div>
     </article>
+    <!-- Connect the html file with the jquery UI file -->
     <script src="js/jquery.js"></script>
     <script src="js/ui.js"></script>
   	</body>
